# Project_Neo

./: .gitignore  .gitmodules  README.md  neo0.txt  presentation.md
.github/workflows/: deploy.yaml
Exercise1/docu/: Exercise1.md  Exercise2.md
devsetup/: README.md
devsetup/.devcontainer/: Dockerfile
devsetup/src/center_points/: CMakeLists.txt  package.xml  setup.py
devsetup/src/facepalm/: package.xml
devsetup/src/jacobian/: CMakeLists.txt
devsetup/src/lipm/: CMakeLists.txt  setup.py
devsetup/src/rviz_run/: CMakeLists.txt  package.xml
docu/: Exercise1.md  Exercise2.md  Exercise3.md
docu/projectNeo/: ezInverseKinematic.md  optimalControl.md  stability.md  supportPolygon.md  todos.md
docu/projectNeo/ProjectNeo/: package.json  pnpm-lock.yaml  slides.md
docu/projectNeo/notes/: optimalControl.md  presentationSnippets.md  stability.md  todos.md
fresh/: Dockerfile  Makefile  todos.md
fresh2/: Dockerfile  Makefile  README.md
fresh2/ws/install/: local_setup.sh  setup.sh
fresh2/ws/log/: latest_build  latest_graph  latest_list
h1_2/: Dockerfile  Makefile  README.md
h1_devsetup/: README.md
h1_devsetup/.devcontainer/: Dockerfile  devcontainer.json
h1_devsetup/src/lipm/: CMakeLists.txt  package.xml
pkgs/dodge_it/: CMakeLists.txt  package.xml
pkgs/dodge_it/config/: stability.rviz
pkgs/dodge_it/launch/: h1_rviz_gui.launch.py  h1_rviz_manual.launch.py  (+1 more)
pkgs/mover/: CMakeLists.txt  package.xml
pkgs/neo_utils/: CMakeLists.txt  package.xml
pkgs/point_calculator/: CMakeLists.txt  package.xml
pkgs/utils/: CMakeLists.txt  package.xml
(+35 files in other folders)
